Fixed extra margin

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,6 @@ nav {
 	top: 10px;
 	width:100px
 }
-article, #main{
+#main{
 	margin-left:120px;
 }
